Remove all references to deprecated Jakarta libraries